--- a/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
+++ b/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
@@ -5,6 +5,7 @@ cl_nameplates_clan_size 0
 cl_nameplates_strong_size 38
 cl_text_entities 0
 cl_text_entities_size 50
+cl_autoswitch_weapons 0
 cl_showhud_healthammo 0
 cl_showhud_score 0
 cl_freezebars_alpha_inside_freeze 13
@@ -14,14 +15,15 @@ cl_mouse_max_distance 350
 cl_smooth_spectating_time 200
 cl_show_welcome 0
 cl_download_community_skins 1
+cl_default_zoom 11
 player_use_custom_color 1
-player_color_body 6404376
-player_color_feet 2424635
-player_skin "koon"
+player_color_body 2499072
+player_color_feet 9162584
+player_skin "ram"
 player_default_eyes 2
-ui_page 9
-ui_settings_page 9
-ui_server_address "57.128.201.180:8311"
+ui_settings_page 8
+ui_toolbox_page 2
+ui_server_address "45.141.57.22:8330"
 ui_color 3449833124
 ui_unread_news 1
 dummy_name "bootee"
@@ -32,11 +34,11 @@ dummy_color_feet 9260800
 dummy_skin "koon"
 dummy_default_eyes 2
 cl_skip_start_menu 1
-player_name "=phacrum="
+player_name "dr.bebert"
 player_clan "desufnoc"
 player_country 585
-cl_skin_filter_string "jee"
-cl_assets_entities "comfort2.1"
+cl_skin_filter_string "ram"
+cl_assets_entities "miximinimalistv2"
 cl_asset_game "game_AK47_PitchBlack_mixed_st"
 cl_asset_emoticons "Comic_by_Ravie_CC_BY-NC-ND"
 cl_asset_hud "Whitney"
@@ -49,19 +51,18 @@ snd_volume 15
 snd_ambient_volume 0
 snd_nonactive_mute 1
 snd_gun 0
-gfx_screen_width 3840
-gfx_screen_height 2160
-gfx_screen_refresh_rate 240
-gfx_desktop_width 3840
-gfx_desktop_height 2160
-gfx_high_detail 0
+gfx_screen_width 1920
+gfx_screen_height 1080
+gfx_screen_refresh_rate 480
+gfx_desktop_width 1920
+gfx_desktop_height 1080
 gfx_refresh_rate 960
 cl_race_binds_set 1
 cl_race_show_ghost 0
 cl_show_others_alpha 10
 cl_overlay_entities 100
-cl_background_entities_color 69
-cl_background_entities "bg/bit2.map"
+cl_background_entities_color 857190
+cl_background_entities "bg/bit2xx.ma"
 cl_menu_map "heavens"
 cl_show_ninja 0
 cl_hook_coll_size 3
@@ -260,6 +261,13 @@ add_friend "kill the tee" "Math <3"
 add_friend "Twixco" "♥"
 add_friend "Cendren" "rare"
 add_friend "Gooran" "A-Team"
+add_friend "\\\\=DLG=//" ""
+add_friend "E-ron.'" "|*KoG*|"
+add_friend "Rex♣•◘○" "|*KoG*|"
+add_friend ".Pairs()" ""
+add_friend "Camel Black" ""
+add_friend "- Jogginghose" ""
+add_friend "iParano" "Infamous"
 tc_frozen_tees_size 10
 tc_frozen_tees_only_inteam 1
 tc_improve_mouse_precision 1
